nextcloud/nextcloud-new-yaml/nextcloud-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      nodeName: node1
      containers:
      - name: mysql
        image: mysql:5.7
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
          subPath: mysql-data
      volumes:
      - name: db-storage
        hostPath:
          path: /data/nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
  - protocol: TCP
    port: 3306
