nextcloud/nextcloud-new-yaml/nextcloud-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: nextcloud
  namespace: nextcloud
spec:
  rules:
  - host: nextcloud.k8s.fit
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud-server
          servicePort: 80
